<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titulo2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio2">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="384dp"
        android:layout_height="108dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:hint="@string/titulo2"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/regresar2"
            android:layout_width="225dp"
            android:layout_height="59dp"
            android:background="@drawable/regresar"
            android:contentDescription="Regresar"
            android:onClick="main"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/regresar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="380dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/a"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/b"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/c"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="376dp"
        android:layout_height="68dp"
        android:layout_marginTop="27dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <EditText
            android:id="@+id/numa"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/numa"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/numb"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/numb"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/numc"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/numc"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="378dp"
        android:layout_height="238dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <Button
            android:id="@+id/cacularecuacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cacularecuacion"
            android:onClick="ecuacion2Grado"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/resultadoecuacion"
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>