<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Ejercicio3">

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="113dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titulo3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/titulo3"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/regresar3"
            android:layout_width="173dp"
            android:layout_height="70dp"
            android:background="@drawable/regresar"
            android:contentDescription="regresar"
            android:onClick="regresar"
            android:scaleType="fitXY"
            android:src="@drawable/regresar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="386dp"
        android:layout_height="512dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/aniobisiesto"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/aniobisiesto"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/calcularanio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calcularanio"
            android:onClick="calcular_anio"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/resultadoanio"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>