<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio4">

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="401dp"
        android:layout_height="115dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titulo4"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:hint="@string/titulo4"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/regresar4"
            android:layout_width="156dp"
            android:layout_height="77dp"
            android:background="@drawable/regresar"
            android:contentDescription="Regresar"
            android:onClick="main"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/regresar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="385dp"
        android:layout_height="79dp"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <EditText
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="379dp"
        android:layout_height="452dp"
        android:layout_marginTop="21dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <Button
            android:id="@+id/calcularfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calcularfecha"
            android:onClick="calculofecha"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/resultadofecha"
            android:layout_width="match_parent"
            android:layout_height="338dp"
            android:textAlignment="center"
            android:textSize="34sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>